// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Listing > should display the image with the cover-fill and aspect-video classes 1`] = `
<body>
  <div>
    <article
      class="rounded-lg border bg-card text-card-foreground shadow-sm flex flex-col"
    >
      <header
        class="flex flex-col space-y-1.5 p-6"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight line-clamp-1"
        >
          Test Listing
        </h3>
        <div
          class="flex items-center justify-between gap-4"
        >
          <p
            class="text-lg font-extrabold text-hue-color"
          >
            $100
          </p>
          <p
            class="text-sm text-muted-foreground"
          >
            Test Location
          </p>
        </div>
      </header>
      <div
        class="p-6 pt-0 space-y-6"
      >
        <img
          alt="Test Listing"
          class="aspect-video object-cover"
          src="test.jpg"
        />
        <p
          class="text-sm text-muted-foreground line-clamp-3"
        >
          Test Description
        </p>
      </div>
      <footer
        class="items-center p-6 pt-0 mt-auto flex gap-4"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2 min-w-20"
          type="button"
        >
          View
        </button>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 min-w-20"
          type="button"
        >
          Reply
        </button>
      </footer>
    </article>
  </div>
</body>
`;

exports[`Listing > should display the listing details 1`] = `
<body>
  <div>
    <article
      class="rounded-lg border bg-card text-card-foreground shadow-sm flex flex-col"
    >
      <header
        class="flex flex-col space-y-1.5 p-6"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight line-clamp-1"
        >
          Test Listing
        </h3>
        <div
          class="flex items-center justify-between gap-4"
        >
          <p
            class="text-lg font-extrabold text-hue-color"
          >
            $100
          </p>
          <p
            class="text-sm text-muted-foreground"
          >
            Test Location
          </p>
        </div>
      </header>
      <div
        class="p-6 pt-0 space-y-6"
      >
        <p
          class="text-sm text-muted-foreground line-clamp-3"
        >
          Test Description
        </p>
      </div>
      <footer
        class="items-center p-6 pt-0 mt-auto flex gap-4"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2 min-w-20"
          type="button"
        >
          View
        </button>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 min-w-20"
          type="button"
        >
          Reply
        </button>
      </footer>
    </article>
  </div>
</body>
`;

exports[`Listing > should format the price as an Australian dollar currency 1`] = `
<body>
  <div>
    <article
      class="rounded-lg border bg-card text-card-foreground shadow-sm flex flex-col"
    >
      <header
        class="flex flex-col space-y-1.5 p-6"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight line-clamp-1"
        >
          Test Listing
        </h3>
        <div
          class="flex items-center justify-between gap-4"
        >
          <p
            class="text-lg font-extrabold text-hue-color"
          >
            $1,000
          </p>
          <p
            class="text-sm text-muted-foreground"
          >
            Test Location
          </p>
        </div>
      </header>
      <div
        class="p-6 pt-0 space-y-6"
      >
        <p
          class="text-sm text-muted-foreground line-clamp-3"
        >
          Test Description
        </p>
      </div>
      <footer
        class="items-center p-6 pt-0 mt-auto flex gap-4"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2 min-w-20"
          type="button"
        >
          View
        </button>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2 min-w-20"
          type="button"
        >
          Reply
        </button>
      </footer>
    </article>
  </div>
</body>
`;
